# updaterlib

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakelists.txt  LICENSE  README.md  appUpdater.pro  appupdater.cpp  appupdater.h  bitbucket-pipelines.yml  deploy_release.bat  deploy_release.sh  main.cpp
src/: CMakeLists.txt  CMakelists.txt  curlBridge.cpp  curlBridge.h  main.cpp  platformSpecific.cpp  platformSpecific.h  updater.cpp  updater.h  updaterInterface.cpp  updaterInterface.h  version.h  versionInfo.cpp  versionInfo.h  version_template.h  xmlParser.cpp  xmlParser.h
unittests/: CMakeLists.txt  CMakelists.txt  README.md  appUpdateSample.xml  checkDownloadXml.cpp  checkFtp.cpp  checkUpdater.cpp  checkUrl.cpp  checkVersionInfo.cpp  checkXmlParser.cpp  https.c  main.cpp  xmlParse.cpp
