cmake_minimum_required(VERSION 2.8)
project(curlCheck)

include_directories("${PROJECT_SOURCE_DIR}/../3d-party/curl/include")

set(CURL_LIB_PATH "${PROJECT_SOURCE_DIR}/../3d-party/curl")
set(XML_LIB_PATH "${PROJECT_SOURCE_DIR}/../3d-party/libxml2")

if (WIN32)
set(SSL_LIB_PATH $ENV{SSL_PATH})
set(CURL_PREFIX "builds/libcurl-vc-x86-release-dll-ssl-dll-ipv6-sspi")
set(XML_PREFIX "win32/bin.msvc")
link_directories("${CURL_LIB_PATH}/${CURL_PREFIX}/lib")
link_directories("${CURL_LIB_PATH}/${CURL_PREFIX}/bin")
link_directories("${SSL_LIB_PATH}/Lib")
link_directories("${XML_LIB_PATH}/${XML_PREFIX}")


elseif(UNIX)
set(CURL_PREFIX "lib/.libs")
link_directories("${CURL_LIB_PATH}/${CURL_PREFIX}")
endif()

add_executable(${PROJECT_NAME}_checkUrl checkUrl.cpp)
add_executable(${PROJECT_NAME}_checkFtp checkFtp.cpp)
add_executable(${PROJECT_NAME}_http-post http-post.c)
add_executable(${PROJECT_NAME}_https-get https.c)
add_executable(${PROJECT_NAME}_checkVersionInfo checkVersionInfo.cpp)
add_executable(${PROJECT_NAME}_checkUpdater checkUpdater.cpp)
add_executable(${PROJECT_NAME}_checkDownloadXml checkDownloadXml.cpp)
add_executable(${PROJECT_NAME}_checkXmlParser checkXmlParser.cpp)

set(CURL_LIB "curl")
set(SSL_LIB "ssl")
set(CRYPTO_LIB "crypto")
set(UPDATER_LIB "appUpdaterStatic")
set(XML_LIB "xml2")
if(WIN32)
set(CURL_LIB "libcurl.dll")
set(SSL_LIB "libssl.dll")
set(CRYPTO_LIB "libcrypto.dll")
set(XML_LIB "libxml2.dll")
endif()

if(WIN32)
configure_file("${CURL_LIB_PATH}/${CURL_PREFIX}/bin/libcurl.dll" "${PROJECT_BINARY_DIR}/Release" COPYONLY)
configure_file("${SSL_LIB_PATH}/libcrypto-1_1.dll" "${PROJECT_BINARY_DIR}/Release" COPYONLY)
configure_file("${SSL_LIB_PATH}/libssl-1_1.dll" "${PROJECT_BINARY_DIR}/Release" COPYONLY)
elseif(UNIX)
configure_file("${CURL_LIB_PATH}/${CURL_PREFIX}/libcurl.so.4.5.0" ${PROJECT_BINARY_DIR} COPYONLY)
endif()

target_link_libraries(${PROJECT_NAME}_checkUrl ${CURL_LIB} ${SSL_LIB} ${CRYPTO_LIB})
target_link_libraries(${PROJECT_NAME}_checkFtp ${CURL_LIB} ${SSL_LIB} ${CRYPTO_LIB})
target_link_libraries(${PROJECT_NAME}_http-post ${CURL_LIB} ${SSL_LIB} ${CRYPTO_LIB})
target_link_libraries(${PROJECT_NAME}_https-get ${CURL_LIB} ${SSL_LIB} ${CRYPTO_LIB})
target_link_libraries(${PROJECT_NAME}_checkVersionInfo ${UPDATER_LIB})
target_link_libraries(${PROJECT_NAME}_checkUpdater ${CURL_LIB} ${SSL_LIB} ${CRYPTO_LIB} ${UPDATER_LIB})
target_link_libraries(${PROJECT_NAME}_checkDownloadXml ${CURL_LIB} ${SSL_LIB} ${CRYPTO_LIB} ${UPDATER_LIB})
target_link_libraries(${PROJECT_NAME}_checkXmlParser ${XML_LIB} ${UPDATER_LIB})

add_test(checkUrl ${PROJECT_NAME}_checkUrl)
add_test(checkFtp ${PROJECT_NAME}_checkFtp)
add_test(http-post ${PROJECT_NAME}_http-post)
add_test(https-get ${PROJECT_NAME}_https-get)
add_test(checkVersionInfo ${PROJECT_NAME}_checkVersionInfo)
add_test(checkUpdater ${PROJECT_NAME}_checkUpdater)
add_test(checkDownloadXml ${PROJECT_NAME}_checkDownloadXml)
add_test(checkXmlParser ${PROJECT_NAME}_checkXmlParser)
